--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Django>=5.0,<5.2
-pandas
-openpyxl
-Django==5.1.1
+--only-binary=:all:
+Django==5.1.3
 pandas==2.2.2
 openpyxl==3.1.2
+gunicorn==21.2.0
